<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GraDesign</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="select_button_content">请选择要分类的照片 []~(￣▽￣)~*</string>
    <string name="sdcard_unmonted_hint">请选择要分类的照片 []~(￣▽￣)~*</string>
    <string name="empty_hint">没有发现文件</string>
    <string name="open_file_error_format">不支持此类文件格式</string>
    <string name="generate_sift_content">生成.fea文件到/storage/sdcard1/GraDesign/sift</string>
	<string name="cluster_content">开始聚类</string>
	<string name="freq_content">统计词频</string>
	<string name="lda_content">文本聚类</string>
	<string name="copy_file_content">拷贝文件</string>
</resources>
